fixed pid card overflow

--- a/src/components/EdiXualCreationsPIDCard.css
+++ b/src/components/EdiXualCreationsPIDCard.css
@@ -1,7 +1,8 @@
 .pid-card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
+  justify-content: space-between;
 
   background-color: var(--menu-color);
   margin-top: 4rem;
@@ -112,7 +113,7 @@
 
 .card-container-btn.expand span:last-child {
   background-color: var(--primary-text-color);
-  transform: translate(0, 0.7rem) rotateZ(0); 
+  transform: translate(0, 0.7rem) rotateZ(0);
 }
 
 .card-container-btn button {
